[gd_scene load_steps=4 format=3 uid="uid://dnj2tewb1jq0n"]

[ext_resource type="Script" path="res://Scenes/Areas/SpawnArea.gd" id="1_k8est"]
[ext_resource type="PackedScene" uid="uid://dnrmhhkpx5fxj" path="res://Scenes/Gameplay/SpawnTimer.tscn" id="2_8imah"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_phir2"]
resource_local_to_scene = true
size = Vector2(192, 64)

[node name="SpawnArea" type="Area2D"]
collision_layer = 512
collision_mask = 0
monitoring = false
monitorable = false
script = ExtResource("1_k8est")
metadata/_edit_group_ = true

[node name="SpawnAreaShape" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_phir2")
debug_color = Color(0.8, 0.2, 6, 0.42)

[node name="SpawnTimer" parent="." instance=ExtResource("2_8imah")]

[connection signal="didSpawn" from="SpawnTimer" to="." method="onSpawnTimer_didSpawn"]
